--- a/soundrecorder/src/main/res/values-in/strings.xml
+++ b/soundrecorder/src/main/res/values-in/strings.xml
@@ -192,5 +192,12 @@
     <string name="rate">Beri Rating</string>
     <string name="later">Nanti</string>
 
+    <string name="recommend_app">Izinkan saya merekomendasikan aplikasi ini</string>
+    <string name="lesson">Pelajaran</string>
+    <string name="tutorial">Tutorial</string>
+    <string name="hi">Hai</string>
+    <string name="welcome">Selamat datang</string>
+
+
 
 </resources>
