--- a/soundrecorder/src/main/res/values-zh/strings.xml
+++ b/soundrecorder/src/main/res/values-zh/strings.xml
@@ -190,4 +190,11 @@
     <string name="later">稍后</string>
 
 
+    <string name="recommend_app">让我向你推荐这个应用</string>
+    <string name="lesson">课程</string>
+    <string name="tutorial">教程</string>
+    <string name="hi">你好</string>
+    <string name="welcome">欢迎</string>
+
+
 </resources>
