--- a/soundrecorder/src/main/res/values/strings.xml
+++ b/soundrecorder/src/main/res/values/strings.xml
@@ -190,4 +190,10 @@
     <string name="select">Pilih</string>
     <string name="select_one">Select One</string>
 
+    <string name="recommend_app">Let me recommend you this application</string>
+    <string name="lesson">Lesson</string>
+    <string name="tutorial">Tutorial</string>
+    <string name="hi">Hi</string>
+    <string name="welcome">Welcome</string>
+
 </resources>
